--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "stickntrade-pricelist",
   "version": "1.0.0",
-  "description": "Primordial Unique Items Pricelist",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.19.2",
+    "express-session": "^1.18.1",
+    "mongoose": "^8.6.1",
+    "multer": "^1.4.5-lts.1"
   }
 }
